# flask-faster-api

./: FlaskTask1.py  LICENSE  PublishTag.sh  README.md  README.rst  app.py  app_v1.py  app_v2.py  app_v3.py  auth.py  courses.json  pyproject.toml  requirements.txt  requirements_poetry.txt  verify.sh
.github/workflows/: Publish.yml  python-package.yml
Autowire/autowire_decorator/: pyproject.toml
Autowire/autowire_decorator/autowire_decorator/: parser_api.py
Autowire/autowire_decorator/tests/: test_autowire.py
FastAPI/: main.py
FastAPI v1.0/: api.py  auth.py  data.py  imports.py
FastAPI/app/routes/: auth_routes.py  courses_routes.py
FastAPI/app/schemas/: auth_schema.py  courses_schema.py
FastAPI/app/services/: auth_service.py
FastAPI/fastapi-venv/: pyvenv.cfg
FastAPI/fastapi-venv/Scripts/: activate  activate.bat
Flask-Restx/: app-v2.py  auth.py  autowire_decorator.py  model.py  parser_api.py  path_param.py
Flask-Restx/Autowire_Decorator/: autowire_decorator.py  model.py
FlaskRestY/: README.rst  pyproject.toml
FlaskRestY/flaskresty/: autowire_decorator.py  model_api.py
FlaskRestY/tests/: test_flaskresty.py
courses-api-ddd/: requirements.txt  v2.py
courses-api-ddd/courses/domain/: course.py  teacher.py
courses-api-ddd/courses/repos/: __init__.py
data/: Courses_.py  Models.py  Students_.py  Users_.py
examples/: api_model_example.py  data.py  quick_start.py  simple_example.py
examples/flask_fastx/: autowire_decorator.py  model_api.py  param_funcations.py  params.py  parser_api.py
extensions/: get_parser.py
flask-fastx/: pyproject.toml
flask-fastx/flask_fastx/: model_api.py  parser_api.py
flask-fastx/tests/: test_flask_fastx.py  test_model.py  utils.py
flask-restx-square/: pyproject.toml
flask-restx-square/flask_restx_square/: autowire_decorator.py  path_param.py
flask-restx-square/tests/: test_flask_restx_square.py  test_model.py
flask_fastx/: __init__.py  autowire_decorator.py  model_api.py  model_param.py  param_funcations.py  params.py  parser_api.py  path_param.py
flask_restx_square/: __init__.py  autowire_decorator.py  model_api.py  param_funcations.py  params.py  parser_api.py
flask_restx_square/django_autowire/: django_autowire.py
flaskresty/: autowire_decorator.py  model_api.py  parser_api.py  path_param.py
helper/: auth.py  auth_v3.py
tests/: test_flask_restx_square.py  test_model.py  test_parser.py  utils.py
using-flask/: auth.py  dummy.py  main.py  models.py  requirements.txt  v1.py
using-flask/courses/usecases/: course_use_cases.py
using-flask/services/: auth.py
v1.0/: api.py
v2.0/: api.py  api.py.cc718ee4f912417b9415134784e800fa.tmp  api_models.py  auth.py  data.json  imports.py  model.py
v3.0/: api.py
