[tool.poetry]
name = "flask-fastx"
version = "0.1.2"
description = "Flask-Fastx is a Fast API style support for Flask. It Gives you MyPy types with the flexibility of flask."
authors = ["nadaabdelmaboud     seifashraf1     ahmedihabb2     omargamal253"]
readme = "README.rst"
homepage = "https://github.com/tactful-ai/flask-faster-api"
repository = "https://github.com/tactful-ai/flask-faster-api"
maintainers = ["ahmedbaz14@gmail.com"   , "seifashraf145@gmail.com"  , "nada5aled52@gmail.com" , "omargamal253@gmail.com"]
keywords = ["flask", "flask-restx","Mypy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask-restx = "^0.5.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
pylint = "^2.9.6"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
