[tool.poetry]
name = "FlaskRestY"
version = "0.1.4"
description = "Flask-RESTY is a Fast API style support for Flask. It Gives you MyPy types with the flexibility of flask."
authors = ["nadaabdelmaboud <nada5aled5@gmail.com>"]
keywords = ["flask", "flask-restx","Mypy"]
readme = "README.rst"
license = "MIT"
[tool.poetry.dependencies]
python = "^3.7"
flask-restx = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
