[tool.poetry]
name = "autowire_decorator"
version = "0.1.0"
description = ""
authors = ["nadaabdelmaboud <nada5aled52@gmail.com>"]
readme = "README.md"
license = "MIT"
[tool.poetry.dependencies]
python = "^3.7"
flask-restx = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
